Fully move to log4j